--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shine Metal Polishers
-url: "http://wanted-ibex.cloudvent.net/"
+url: "http://www.shinemetalpolishers.co.nz/"
 baseurl:
 
 kramdown:
